syntax = "proto3";
option go_package ="./inventory_pb";
package inventory_pb;

service Inventory {
  rpc SetInv(GoodsInvInfo) returns(Empty); //设置库存
  rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo); // 获取库存信息
  rpc Sell(SellInfo) returns (Empty); //库存扣减
  rpc Reback(SellInfo) returns(Empty); //库存归还
}
message Empty{
}
message GoodsInvInfo {
  int32 goodsId = 1;
  int32 num = 2;
}

message SellInfo {
  repeated GoodsInvInfo goodsInfo = 1;
  string OrderSn=2;
}